# Distributed-File-Server

./: .gitignore  README.md
Client/: Client.cabal  run.sh
Client/app/: Main.hs
Client/src/: Client.hs
DirectoryService/: .gitignore  ChangeLog.md  DirectoryService.cabal  package.yaml  run.sh  stack.yaml
DirectoryService/app/: Main.hs
DirectoryService/src/: Database.hs  Lib.hs  Server.hs
FileService/: ChangeLog.md  README.md  distributed-file-server.cabal  post.sh  run.sh  stack.yaml
FileService/files/: craig.txt
FileService/src/: Server.hs
LockingService/: LockingService.cabal  README.md  post.sh  run.sh  stack.yaml
LockingService/app/: Main.hs
LockingService/src/: Database.hs  Server.hs
api/: api.cabal
api/app/: Main.hs
api/src/Api/: Directory.hs  File.hs  Locking.hs
