name:                Client
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Client#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Client
  build-depends:       base >= 4.7 && < 5
                     , api
                     , aeson
                     , editor-open
                     , bytestring
                     , servant-server
                     , wai
                     , warp
  default-language:    Haskell2010

executable Client-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Client
  default-language:    Haskell2010

test-suite Client-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Client
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , bytestring
                     , aeson
                     , filepath
                     , directory
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Client
